--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  align-items: end;
   padding: 1rem 2rem;
   background-color: var(--background);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
