--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,131 +1,134 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .section {
-    padding: 4rem 0;
-    text-align: center;
-  }
-  
-  .home {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .homeTitle {
-    font-size: 2.5rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
-  .homeHighlight {
-    color: #f56565;
-  }
-  
-  .homeDescription {
-    font-size: 1.25rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  .learnMoreButton {
-    margin-top: 1rem;
-    padding: 0.75rem 1.5rem;
-    border: 2px solid #f56565;
-    color: #f56565;
-    border-radius: 0.5rem;
-    transition: background-color 0.2s, color 0.2s;
-  }
-  
-  .learnMoreButton:hover {
-    background-color: #f56565;
-    color: white;
-  }
-  
-  /* About */
-  .about {
-    height: 100vh;
-    background-color: #2d3748;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .aboutTitle {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
-  .aboutDescription {
-    font-size: 1.25rem;
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  
-  /* Projects  */
-  .projects {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .projectsTitle {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
-  .projectsDescription {
-    font-size: 1.25rem;
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  
-  /* Contact  */
-  .contact {
-    height: 100vh;
-    background-color: #2d3748;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-  
-  .contactTitle {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-  }
-  
-  .contactDescription {
-    font-size: 1.25rem;
-  }
-  
-  .contactButton {
-    margin-top: 1rem;
-    padding: 0.75rem 1.5rem;
-    border: 2px solid #f56565;
-    color: #f56565;
-    border-radius: 0.5rem;
-    transition: background-color 0.2s, color 0.2s;
-  }
-  
-  .contactButton:hover {
-    background-color: #f56565;
-    color: white;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 0;
+  margin: 0;
+}
+
+.section {
+  padding: 4rem 0;
+  text-align: center;
+}
+
+.home {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.homeTitle {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.homeHighlight {
+  color: #f56565;
+}
+
+.homeDescription {
+  font-size: 1.25rem;
+  margin-bottom: 1.5rem;
+}
+
+.learnMoreButton {
+  margin-top: 1rem;
+  padding: 0.75rem 1.5rem;
+  border: 2px solid #f56565; 
+  background-color: #f56565; 
+  color: white;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s, color 0.2s, transform 0.1s;
+}
+
+.learnMoreButton:hover {
+  background-color: #f2bebe;
+  color: white;
+}
+
+/* About */
+.about {
+  height: 100vh;
+  background-color: #2d3748;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.aboutTitle {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.aboutDescription {
+  font-size: 1.25rem;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+/* Projects */
+.projects {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.projectsTitle {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.projectsDescription {
+  font-size: 1.25rem;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+/* Contact */
+.contact {
+  height: 100vh;
+  background-color: #2d3748;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.contactTitle {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.contactDescription {
+  font-size: 1.25rem;
+}
+
+.contactButton {
+  margin-top: 1rem;
+  padding: 0.75rem 1.5rem;
+  border: 2px solid #f56565;
+  color: #f56565;
+  border-radius: 0.5rem;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.contactButton:hover {
+  background-color: #f56565;
+  color: white;
+}
